fix: Image overflow
- Fix image overflow container

--- a/styles.css
+++ b/styles.css
@@ -49,12 +49,14 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  padding: 1rem;
   aspect-ratio: 1 / 1;
   flex-grow: 1;
 }
 
 .pokes__img {
   width: 100%;
+  max-height: 100%;
   margin-bottom: 6px;
   object-fit: contain;
 }
